--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>regular pixel editor</title>
-		<link rel="stylesheet" href="editor.css">
+		<link rel="stylesheet" href="index.css">
 		<script type="module" src="main.js"></script>
 	</head>
 	<body>
